deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkinsapp
  namespace: default
  labels:
    app: jenkinsapp
spec:
  ports:
  - port: 4000
    name: http
  selector:
    app: jenkinsapp
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkinsapp
  namespace: default
spec:
  strategy: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkinsapp
        version: v1
    spec:
      containers:
      - name: jenkinsapp
        image: claudioacquaviva/jenkinsapp
        ports:
        - containerPort: 4000
---
