gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: acqua-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      number: 80
      name: http
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: acqua
spec:
  hosts:
  - "*"
  gateways:
  - acqua-gateway
  http:
  - match:
    - uri:
        exact: /sentence
    - uri:
        exact: /hello
    - uri:
        exact: /
    - uri:
        exact: /hw2
    route:
    - destination:
        host: jenkinsapp
        port:
          number: 4000
